# Projeto-consumindo-API-Twitter

./: .editorconfig  README.md  docker-compose.yml  main.py  pyproject.toml
Relatório PowerBI/: Dashboard.pbix
src/: codigos.py  comandos.py  conexao.py  servicos.py
