[tool.poetry]
name = "consumindo api twitter"
version = "1.0.0"
description = "projeto1"
authors = ["Danielmcaires <danielmcaires@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.1"
pymongo = "^4.0.1"
tweepy = "^4.6.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
docker-compose = "^1.29.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
